Tyrone styles some UI that kle built functionality for, namely teh login screen,textAreas,overall spacing and rectifying some small issues

--- a/htdocs/styles/styles.css
+++ b/htdocs/styles/styles.css
@@ -121,7 +121,7 @@ img{
 .centered{
     text-align: center;
 }
-input, select{
+input, select, textArea{
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -o-border-radius: 5px;
@@ -138,7 +138,11 @@ input, select{
     
     width: 100%;
 }
-input[type=button]{
+textArea{
+    resize: vertical;
+    min-height: 150px;
+}
+input[type=button], input[type=submit]{
     background: #FC0;
     border: 0;
     color: #000;
@@ -243,11 +247,14 @@ nav{
 }
 .contents{
     width: 100%;
-    margin: 20px 0 0 0;
+    margin: 122px 0 0 0;
 }
 #quicksend{
     width: 350px;
     position: relative;
+}
+.switch_loader{
+    margin: 0 0 10px 0;
 }
 
 
@@ -306,6 +313,14 @@ nav{
     display: inline-block;
 }
 
+
+/*==============================================
+                 IMPORTLIST
+===============================================*/
+#importlist{
+    width: 200px;
+    margin: 0 0 0 25px;
+}
 
 /*==============================================
                  LOGS
